--- a/sass/org/_toppage.scss
+++ b/sass/org/_toppage.scss
@@ -548,4 +548,23 @@
 		}
 	}
 }
+/*--------------------------------------------------------------
+## Category
+--------------------------------------------------------------*/
+
+.tp-cate{
+	
+	
+	.tpc-1,.tpc-2,.tpc-3{
+		height:48.4375vw;
+	}
+	
+	.tpc-1{
+	}
+	.tpc-2{
+	}
+	.tpc-3{
+	}
+}
+
 
