--- a/sass/org/_toppage.scss
+++ b/sass/org/_toppage.scss
@@ -14,10 +14,6 @@
 		width:100%;
 		height:100%;
 		
-		/*
-		background-size:cover;
-		background-position: center;
-		*/
 		object-fit:cover;
 		object-position: center;
 	}
@@ -72,18 +68,6 @@
 			h2{
 				font-size:1.2em;
 				line-height:1.4em;
-				letter-spacing:0.2em;
-			}
-			p{
-				font-size:0.9em;
-				line-height:1.4em;
-				letter-spacing:0.2em;
-			}
-		}
-		@include mq(md) {
-			h2{
-				font-size:1.2em;
-				line-height:1.1em;
 				letter-spacing:0.2em;
 			}
 			p{
@@ -260,50 +244,8 @@
 			grid-column: 2 / 3;
 			grid-row: 3 / 4;
 		}
-	}		
-	@include mq(lg) {
-		grid-template-columns: 61.5% 36.5%;
-		grid-template-rows: 36.328125vw 12.109375vw 12.109375vw;
-	
-		.tpf-carousel{
-			grid-column: 1 / 2;
-			grid-row: 1 / 4;
-		}
-		.tpf-newest1{
-			grid-column: 2 / 3;
-			grid-row: 1 / 2;
-		}
-		.tpf-newest2{
-			grid-column: 2 / 3;
-			grid-row: 2 / 3;
-		}
-		.tpf-newest3{
-			grid-column: 2 / 3;
-			grid-row: 3 / 4;
-		}
-	}	
-	@include mq(md) {
-		grid-template-columns: 59% 39%;
-		grid-template-rows: 96.875vw 28.28125vw 28.28125vw;
-	
-		.tpf-carousel{
-			grid-column: 1 / 3;
-			grid-row: 1 / 2;
-		}
-		.tpf-newest1{
-			grid-column: 1 / 2;
-			grid-row: 2 / 4;
-		}
-		.tpf-newest2{
-			grid-column: 2 / 3;
-			grid-row: 2 / 3;
-		}
-		.tpf-newest3{
-			grid-column: 2 / 3;
-			grid-row: 3 / 4;
-		}
 	}
-	@include mq(sm) {
+	@include mq(md) {
 		grid-template-columns: 59% 39%;
 		grid-template-rows: 96.875vw 28.28125vw 28.28125vw;
 	
@@ -403,167 +345,102 @@
 }
 
 /*--------------------------------------------------------------
-## Top page Intro
---------------------------------------------------------------*/
-.tp-intro{
-	margin :3.125vw 1.5625vw;
-	
-	display: grid;
-	grid-gap:1.5625vw 2%;
-	
-	@include mq(xl) {
-		grid-template-columns: 61.5% 36.5%;
-		grid-template-rows: auto auto;
-		.tpi-atfirst{
-			grid-column: 2 / 3;
-			grid-row: 1 / 3;
-		}
-		.tpi-taco{
-			grid-column: 1 / 2;
-			grid-row: 1 / 2;
-		}
-		.tpi-ika{
-			grid-column: 1 / 2;
-			grid-row: 2 / 3;
-		}
-	}
-	@include mq(lg) {
-		grid-template-columns: 61.5% 36.5%;
-		grid-template-rows: auto auto;
-		.tpi-atfirst{
-			grid-column: 2 / 3;
-			grid-row: 1 / 3;
-		}
-		.tpi-taco{
-			grid-column: 1 / 2;
-			grid-row: 1 / 2;
-		}
-		.tpi-ika{
-			grid-column: 1 / 2;
-			grid-row: 2 / 3;
-		}
-	}
-	
-	@include mq(md) {
-		grid-template-columns: 98%;
-		grid-template-rows: 24.21875vw auto auto;
-		.tpi-atfirst{
-			grid-column: 1 / 2;
-			grid-row: 1 / 2;
-		}
-		.tpi-taco{
-			grid-column: 1 / 2;
-			grid-row: 2 / 3;
-		}
-		.tpi-ika{
-			grid-column: 1 / 2;
-			grid-row: 3 / 4;
-		}
-	}
-	
-	@include mq(sm) {
-		grid-template-columns: 98%;
-		grid-template-rows: 24.21875vw auto auto;
-		.tpi-atfirst{
-			grid-column: 1 / 2;
-			grid-row: 1 / 2;
-		}
-		.tpi-taco{
-			grid-column: 1 / 2;
-			grid-row: 2 / 3;
-		}
-		.tpi-ika{
-			grid-column: 1 / 2;
-			grid-row: 3 / 4;
-		}
-	}
-	/*
-	@include mq(xl) {
-		flex-direction: row;
-		justify-content: space-between;
-		
-		.tpi-taco,.tpi-atfirst{
-			height:24.21875vw;
-		}
-		.tpi-taco{
-			width:61.5%;
-		}
-		.tpi-atfirst{
-			width:36.3%;
-		}	
-	}
-	@include mq(lg) {
-		flex-direction: row;
-		justify-content: space-between;
-		
-		.tpi-taco,.tpi-atfirst{
-			height:24.21875vw;
-		}
-		.tpi-taco{
-			width:61.5%;
-		}
-		.tpi-atfirst{
-			width:36.3%;
-		}
-	}
-	@include mq(md) {
-		flex-direction: column;
-		.tpi-taco,.tpi-atfirst{
-			width:100%;
-		}
-		.tpi-atfirst{
-			height:48.4375vw;
-		}
-		.tpi-taco{
-			height:auto;
-		}
-	}
-	@include mq(sm) {
-		flex-direction: column;
-		.tpi-taco,.tpi-atfirst{
-			width:100%;
-		}
-		.tpi-atfirst{
-			height:48.4375vw;
-		}
-		.tpi-taco{
-			height:auto;
-		}
-	}
-	*/
-	
-	.tpi-taco,.tpi-ika{
-		a,i{
-			color:$cla-l10;
-			font-weight: bold;
-		}
-		i{
-			margin-right:5px;
-			font-size:1.6rem;
-		}
-	}
-	.tpi-atfirst{
-		a{
-			text-decoration:none;
-		}
-	}
-}
-/*--------------------------------------------------------------
 ## Category
 --------------------------------------------------------------*/
 
 .tp-cate{
 	
+	margin :3.125vw 1.5625vw;
 	
-	.tpc-1,.tpc-2,.tpc-3{
-		height:48.4375vw;
+	.tp-intro,.tpc-1,.tpc-2,.tpc-3{
+		.tpc-title{
+			width:100%;
+			display:flex;
+			justify-content: center;
+			align-items: center;
+			h1{
+				font-size:1.8em;
+				text-align:center;
+				color:$clb-g10;
+				text-shadow: 2px 2px 4px $cla-d08;
+			}
+			i{
+				font-size: 1.8rem;
+				animation: bound 5s ease 0s infinite normal;
+				margin: 0 0.5rem;
+			}
+		}
+		.tpc-index{
+			height:auto;
+			a{
+				text-decoration:none;
+				height:48.4375vw;
+				margin: 1.5625vw 0;
+			}
+			display:flex;
+			flex-direction: column;
+		}
+	}
+	.tp-intro{
+		
+		.tpi-taco,.tpi-ika{
+			a,i{
+				color:$cla-l10;
+				font-weight: bold;
+			}
+			i{
+				margin-right:5px;
+				font-size:1.6rem;
+			}
+		}
 	}
 	
-	.tpc-1{
+	
+	
+	display: grid;
+	grid-gap:1.5625vw 2%;
+
+	@include mq(xl) {
+		grid-template-columns: 61.5% 36.5%;
+		grid-template-rows: auto auto auto;
+		
+		.tp-intro{
+			grid-column: 1 / 2;
+			grid-row: 1 / 2;
+		}
+		.tpc-1{
+			grid-column: 2 / 3;
+			grid-row: 1 / 4;
+		}
+		.tpc-2{
+			grid-column: 1 / 2;
+			grid-row: 2 / 3;
+		}
+		.tpc-3{
+			grid-column: 1 / 2;
+			grid-row: 3 / 4;
+		}
 	}
-	.tpc-2{
-	}
-	.tpc-3{
+	@include mq(tb) {
+		grid-template-columns: 100%;
+		grid-template-rows: auto auto auto auto;
+		
+		.tp-intro{
+			grid-column: 1 / 2;
+			grid-row: 1 / 2;
+		}
+		.tpc-1{
+			grid-column: 1 / 2;
+			grid-row: 2 / 3;
+		}
+		.tpc-2{
+			grid-column: 1 / 2;
+			grid-row: 3 / 4;
+		}
+		.tpc-3{
+			grid-column: 1 / 2;
+			grid-row: 4 / 5;
+		}
 	}
 }
 
