--- a/style.css
+++ b/style.css
@@ -649,10 +649,6 @@ object {
 /*--------------------------------------------------------------
 ## Color
 --------------------------------------------------------------*/
-/*yellow*/
-/*blue*/
-/*white*/
-/*orange*/
 /*base color = white*/
 /*アクセント color = 赤茶*/
 /*--------------------------------------------------------------
@@ -701,37 +697,6 @@ html, body {
 h1 {
   margin: 0; }
 
-/*
-.mkr-w {
-	background: linear-gradient(transparent 60%, $c-acsW-ligh 0%);
-}
-.textgrad-o {
-	background: linear-gradient( 
-		-2deg,
-		$c-acsO-dark 5%,
-		$c-acsO-ligh 50%, 
-		$c-acsO-week 65%, 
-		$c-acsO-ligh 75%,
-		$c-acsO-ligh 100%
-	);
-	-webkit-background-clip: text;
-	background-clip: text;
-	color: transparent;
-}
-.textgrad-s {
-	background: linear-gradient( 
-		-2deg,
-		#000000 5%,
-		$c-acsW-midd 60%, 
-		$c-acsW-ligh 65%, 
-		$c-acsW-dark 75%,
-		#000000 100%
-	);
-	-webkit-background-clip: text;
-	background-clip: text;
-	color: transparent;
-}
-*/
 /*--------------------------------------------------------------
 ## Fonts
 --------------------------------------------------------------*/
@@ -766,33 +731,47 @@ h1 {
   filter: drop-shadow(0.5px 0.5px 0px rgba(10, 10, 10, 0.95)); }
 
 /*--------------------------------------------------------------
-## TextOutline
+## CardPatterns
 --------------------------------------------------------------*/
-/*
-.cloud-out{
-	text-shadow:
-		0 0 5px $c-acsW-ligh,
-		0 0 5px $c-acsW-ligh,
-		0 0 5px $c-acsW-ligh,
-		0 0 5px $c-acsW-ligh,
-		0 0 5px $c-acsW-ligh,
-		0 0 5px $c-acsW-ligh,
-		0 0 5px $c-acsW-ligh,
-		0 0 5px $c-acsW-ligh,
-		0 0 5px $c-acsW-ligh,
-		0 0 5px $c-acsW-ligh,
-		0 0 5px $c-acsW-ligh,
-		0 0 5px $c-acsW-ligh,
-		0 0 5px $c-acsW-ligh,
-		0 0 5px $c-acsW-ligh,
-		0 0 5px $c-acsW-ligh,
-		0 0 5px $c-acsW-ligh,
-		0 0 5px $c-acsW-ligh,
-		0 0 5px $c-acsW-ligh,
-		0 0 5px $c-acsW-ligh,
-		0 0 5px $c-acsW-ligh;
-}
-*/
+.ptn-str-brown {
+  --rlist: var(--c) 0 1px, transparent 0 3px;
+  overflow: hidden;
+  position: relative;
+  height: var(--h);
+  background: repeating-linear-gradient(var(--ang-0, -45deg), var(--rlist)) var(--pos-0, 0 0)/var(--dim), linear-gradient(var(--ang), var(--nlist));
+  --dim: 100% no-repeat;
+  --ang: 0deg;
+  --pos-1: 100%;
+  --ang-0: -60deg;
+  --ang-1: 60deg;
+  --c: rgba(43, 24, 0,1.0);
+  --nlist: rgba(43, 24, 0,1.0), rgba(183, 82, 10,1.0); }
+
+.ptn-str-brown-trans {
+  --rlist: var(--c) 0 1px, transparent 0 3px;
+  overflow: hidden;
+  position: relative;
+  height: var(--h);
+  background: repeating-linear-gradient(var(--ang-0, -45deg), var(--rlist)) var(--pos-0, 0 0)/var(--dim), linear-gradient(var(--ang), var(--nlist));
+  --dim: 100% no-repeat;
+  --ang: 0deg;
+  --pos-1: 100%;
+  --ang-0: -60deg;
+  --ang-1: 60deg;
+  --c: rgba(43, 24, 0,0.6);
+  --nlist: rgba(43, 24, 0,0.4), rgba(183, 82, 10, 0.4); }
+
+/*--------------------------------------------------------------
+## Fire Text
+--------------------------------------------------------------*/
+.ptn-txgrad-fire {
+  background-color: #ff0000;
+  background-image: linear-gradient(-10deg, #ff0000 0%, #ffed00 65%, #FFFFFF 75%, #ffed00 90%);
+  background-clip: text;
+  text-fill-color: transparent;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent; }
+
 /*--------------------------------------------------------------
 ## BOX
 --------------------------------------------------------------*/
@@ -978,10 +957,6 @@ h1 {
     left: 0;
     width: 100%;
     height: 100%;
-    /*
-		background-size:cover;
-		background-position: center;
-		*/
     object-fit: cover;
     object-position: center; }
   .tpv .tpv-area {
@@ -1023,15 +998,6 @@ h1 {
       .tpv .tpv-area h2 {
         font-size: 1.2em;
         line-height: 1.4em;
-        letter-spacing: 0.2em; }
-      .tpv .tpv-area p {
-        font-size: 0.9em;
-        line-height: 1.4em;
-        letter-spacing: 0.2em; } }
-    @media screen and (max-width: 580px) {
-      .tpv .tpv-area h2 {
-        font-size: 1.2em;
-        line-height: 1.1em;
         letter-spacing: 0.2em; }
       .tpv .tpv-area p {
         font-size: 0.9em;
@@ -1158,39 +1124,7 @@ h1 {
       .tp-first .tpf-newest3 {
         grid-column: 2 / 3;
         grid-row: 3 / 4; } }
-  @media screen and (max-width: 1200px) {
-    .tp-first {
-      grid-template-columns: 61.5% 36.5%;
-      grid-template-rows: 36.328125vw 12.109375vw 12.109375vw; }
-      .tp-first .tpf-carousel {
-        grid-column: 1 / 2;
-        grid-row: 1 / 4; }
-      .tp-first .tpf-newest1 {
-        grid-column: 2 / 3;
-        grid-row: 1 / 2; }
-      .tp-first .tpf-newest2 {
-        grid-column: 2 / 3;
-        grid-row: 2 / 3; }
-      .tp-first .tpf-newest3 {
-        grid-column: 2 / 3;
-        grid-row: 3 / 4; } }
   @media screen and (max-width: 580px) {
-    .tp-first {
-      grid-template-columns: 59% 39%;
-      grid-template-rows: 96.875vw 28.28125vw 28.28125vw; }
-      .tp-first .tpf-carousel {
-        grid-column: 1 / 3;
-        grid-row: 1 / 2; }
-      .tp-first .tpf-newest1 {
-        grid-column: 1 / 2;
-        grid-row: 2 / 4; }
-      .tp-first .tpf-newest2 {
-        grid-column: 2 / 3;
-        grid-row: 2 / 3; }
-      .tp-first .tpf-newest3 {
-        grid-column: 2 / 3;
-        grid-row: 3 / 4; } }
-  @media screen and (max-width: 374px) {
     .tp-first {
       grid-template-columns: 59% 39%;
       grid-template-rows: 96.875vw 28.28125vw 28.28125vw; }
@@ -1249,123 +1183,69 @@ h1 {
       letter-spacing: 0.1em; } }
 
 /*--------------------------------------------------------------
-## Top page Intro
+## Category
 --------------------------------------------------------------*/
-.tp-intro {
+.tp-cate {
   margin: 3.125vw 1.5625vw;
   display: grid;
-  grid-gap: 1.5625vw 2%;
-  /*
-	@include mq(xl) {
-		flex-direction: row;
-		justify-content: space-between;
-		
-		.tpi-taco,.tpi-atfirst{
-			height:24.21875vw;
-		}
-		.tpi-taco{
-			width:61.5%;
-		}
-		.tpi-atfirst{
-			width:36.3%;
-		}	
-	}
-	@include mq(lg) {
-		flex-direction: row;
-		justify-content: space-between;
-		
-		.tpi-taco,.tpi-atfirst{
-			height:24.21875vw;
-		}
-		.tpi-taco{
-			width:61.5%;
-		}
-		.tpi-atfirst{
-			width:36.3%;
-		}
-	}
-	@include mq(md) {
-		flex-direction: column;
-		.tpi-taco,.tpi-atfirst{
-			width:100%;
-		}
-		.tpi-atfirst{
-			height:48.4375vw;
-		}
-		.tpi-taco{
-			height:auto;
-		}
-	}
-	@include mq(sm) {
-		flex-direction: column;
-		.tpi-taco,.tpi-atfirst{
-			width:100%;
-		}
-		.tpi-atfirst{
-			height:48.4375vw;
-		}
-		.tpi-taco{
-			height:auto;
-		}
-	}
-	*/ }
-  @media screen and (max-width: 2400px) {
-    .tp-intro {
-      grid-template-columns: 61.5% 36.5%;
-      grid-template-rows: auto auto; }
-      .tp-intro .tpi-atfirst {
-        grid-column: 2 / 3;
-        grid-row: 1 / 3; }
-      .tp-intro .tpi-taco {
-        grid-column: 1 / 2;
-        grid-row: 1 / 2; }
-      .tp-intro .tpi-ika {
-        grid-column: 1 / 2;
-        grid-row: 2 / 3; } }
-  @media screen and (max-width: 1200px) {
-    .tp-intro {
-      grid-template-columns: 61.5% 36.5%;
-      grid-template-rows: auto auto; }
-      .tp-intro .tpi-atfirst {
-        grid-column: 2 / 3;
-        grid-row: 1 / 3; }
-      .tp-intro .tpi-taco {
-        grid-column: 1 / 2;
-        grid-row: 1 / 2; }
-      .tp-intro .tpi-ika {
-        grid-column: 1 / 2;
-        grid-row: 2 / 3; } }
-  @media screen and (max-width: 580px) {
-    .tp-intro {
-      grid-template-columns: 98%;
-      grid-template-rows: 24.21875vw auto auto; }
-      .tp-intro .tpi-atfirst {
-        grid-column: 1 / 2;
-        grid-row: 1 / 2; }
-      .tp-intro .tpi-taco {
-        grid-column: 1 / 2;
-        grid-row: 2 / 3; }
-      .tp-intro .tpi-ika {
-        grid-column: 1 / 2;
-        grid-row: 3 / 4; } }
-  @media screen and (max-width: 374px) {
-    .tp-intro {
-      grid-template-columns: 98%;
-      grid-template-rows: 24.21875vw auto auto; }
-      .tp-intro .tpi-atfirst {
-        grid-column: 1 / 2;
-        grid-row: 1 / 2; }
-      .tp-intro .tpi-taco {
-        grid-column: 1 / 2;
-        grid-row: 2 / 3; }
-      .tp-intro .tpi-ika {
-        grid-column: 1 / 2;
-        grid-row: 3 / 4; } }
-  .tp-intro .tpi-taco a, .tp-intro .tpi-taco i, .tp-intro .tpi-ika a, .tp-intro .tpi-ika i {
+  grid-gap: 1.5625vw 2%; }
+  .tp-cate .tp-intro .tpc-title, .tp-cate .tpc-1 .tpc-title, .tp-cate .tpc-2 .tpc-title, .tp-cate .tpc-3 .tpc-title {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center; }
+    .tp-cate .tp-intro .tpc-title h1, .tp-cate .tpc-1 .tpc-title h1, .tp-cate .tpc-2 .tpc-title h1, .tp-cate .tpc-3 .tpc-title h1 {
+      font-size: 1.8em;
+      text-align: center;
+      color: #fdfffd;
+      text-shadow: 2px 2px 4px rgba(43, 24, 0, 0.8); }
+    .tp-cate .tp-intro .tpc-title i, .tp-cate .tpc-1 .tpc-title i, .tp-cate .tpc-2 .tpc-title i, .tp-cate .tpc-3 .tpc-title i {
+      font-size: 1.8rem;
+      animation: bound 5s ease 0s infinite normal;
+      margin: 0 0.5rem; }
+  .tp-cate .tp-intro .tpc-index, .tp-cate .tpc-1 .tpc-index, .tp-cate .tpc-2 .tpc-index, .tp-cate .tpc-3 .tpc-index {
+    height: auto;
+    display: flex;
+    flex-direction: column; }
+    .tp-cate .tp-intro .tpc-index a, .tp-cate .tpc-1 .tpc-index a, .tp-cate .tpc-2 .tpc-index a, .tp-cate .tpc-3 .tpc-index a {
+      text-decoration: none;
+      height: 48.4375vw;
+      margin: 1.5625vw 0; }
+  .tp-cate .tp-intro .tpi-taco a, .tp-cate .tp-intro .tpi-taco i, .tp-cate .tp-intro .tpi-ika a, .tp-cate .tp-intro .tpi-ika i {
     color: #ff3700;
     font-weight: bold; }
-  .tp-intro .tpi-taco i, .tp-intro .tpi-ika i {
+  .tp-cate .tp-intro .tpi-taco i, .tp-cate .tp-intro .tpi-ika i {
     margin-right: 5px;
     font-size: 1.6rem; }
-  .tp-intro .tpi-atfirst a {
-    text-decoration: none; }
+  @media screen and (max-width: 2400px) {
+    .tp-cate {
+      grid-template-columns: 61.5% 36.5%;
+      grid-template-rows: auto auto auto; }
+      .tp-cate .tp-intro {
+        grid-column: 1 / 2;
+        grid-row: 1 / 2; }
+      .tp-cate .tpc-1 {
+        grid-column: 2 / 3;
+        grid-row: 1 / 4; }
+      .tp-cate .tpc-2 {
+        grid-column: 1 / 2;
+        grid-row: 2 / 3; }
+      .tp-cate .tpc-3 {
+        grid-column: 1 / 2;
+        grid-row: 3 / 4; } }
+  @media screen and (max-width: 800px) {
+    .tp-cate {
+      grid-template-columns: 100%;
+      grid-template-rows: auto auto auto auto; }
+      .tp-cate .tp-intro {
+        grid-column: 1 / 2;
+        grid-row: 1 / 2; }
+      .tp-cate .tpc-1 {
+        grid-column: 1 / 2;
+        grid-row: 2 / 3; }
+      .tp-cate .tpc-2 {
+        grid-column: 1 / 2;
+        grid-row: 3 / 4; }
+      .tp-cate .tpc-3 {
+        grid-column: 1 / 2;
+        grid-row: 4 / 5; } }
