--- a/sass/org/_lib.scss
+++ b/sass/org/_lib.scss
@@ -6,6 +6,8 @@
 $clb-r10:rgba(253, 235, 235,1.0);
 $clb-r03:rgba(253, 235, 235,0.3);
 $clb-g10:rgba(253, 255, 253,1.0);
+$clb-g08:rgba(253, 255, 253,0.8);
+$clb-g06:rgba(253, 255, 253,0.6);
 $clb-g03:rgba(253, 255, 253,0.3);
 
 /*アクセント color = 赤茶*/
