--- a/style.css
+++ b/style.css
@@ -823,8 +823,7 @@ h1 {
   justify-content: flex-start;
   align-items: center;
   position: relative;
-  z-index: 1;
-  filter: drop-shadow(0.39062vw 0.39062vw 0.39062vw rgba(5, 5, 5, 0.9)); }
+  z-index: 1; }
   .talk-base.tkdr-lr {
     flex-direction: row; }
   .talk-base.tkdr-rl {
@@ -838,7 +837,8 @@ h1 {
     align-items: center; }
     .talk-base .tk-charactor img {
       width: 100%;
-      height: auto; }
+      height: auto;
+      filter: drop-shadow(1px 1px 1px rgba(5, 5, 5, 0.9)); }
     .talk-base .tk-charactor p {
       display: inline-block;
       font-size: 0.7em; }
@@ -847,7 +847,8 @@ h1 {
     justify-content: flex-start;
     align-items: center;
     width: 80%;
-    transform: scale(0, 0); }
+    transform: scale(0, 0);
+    filter: drop-shadow(3px 3px 3px rgba(5, 5, 5, 0.8)); }
     .talk-base .tk-puff.tkdr-lr {
       flex-direction: row; }
     .talk-base .tk-puff.tkdr-rl {
@@ -958,7 +959,8 @@ h1 {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    object-position: center; }
+    object-position: center;
+    pointer-events: none; }
   .tpv .tpv-area {
     position: absolute;
     top: 0;
@@ -978,42 +980,52 @@ h1 {
       color: #fdfffd; }
     .tpv .tpv-area .tpva-categ {
       background-color: rgba(255, 55, 0, 0.8);
-      margin-right: 1.5625vw;
+      margin: 0 1.5625vw 0.5vw;
       padding: 0 1.5625vw; }
     .tpv .tpv-area .tpva-title {
       background-color: rgba(43, 24, 0, 0.8);
-      margin: 0.5vw 1.5625vw 1.5625vw 10%;
+      margin: 0 1.5625vw 0.5vw 10%;
       padding: 0.5vw 1.5625vw;
-      text-align: center; }
+      text-align: right; }
+    .tpv .tpv-area .tpva-dect {
+      background-color: rgba(253, 255, 253, 0.8);
+      color: #2b1800;
+      margin: 0 1.5625vw 0.5vw 10%;
+      padding: 0.5vw 1.5625vw;
+      text-align: right; }
     @media screen and (max-width: 2400px) {
       .tpv .tpv-area h2 {
         font-size: 1.6em;
         line-height: 1.1em;
         letter-spacing: 0.2em; }
-      .tpv .tpv-area p {
-        font-size: 1.2em;
-        line-height: 1.4em;
-        letter-spacing: 0.2em; } }
-    @media screen and (max-width: 1200px) {
-      .tpv .tpv-area h2 {
+      .tpv .tpv-area .tpva-categ {
         font-size: 1.2em;
         line-height: 1.4em;
         letter-spacing: 0.2em; }
-      .tpv .tpv-area p {
-        font-size: 0.9em;
-        line-height: 1.4em;
-        letter-spacing: 0.2em; } }
-    @media screen and (max-width: 374px) {
+      .tpv .tpv-area .tpva-dect p {
+        font-size: 1em; } }
+    @media screen and (max-width: 580px) {
       .tpv .tpv-area h2 {
         font-size: 1em;
         line-height: 1.1em;
         letter-spacing: 0.2em; }
-      .tpv .tpv-area p {
+      .tpv .tpv-area .tpva-categ {
         font-size: 0.8em;
         line-height: 1.5em;
-        letter-spacing: 0.2em; } }
-  .tpv .tpv-area:hover .tpva-title {
+        letter-spacing: 0.2em; }
+      .tpv .tpv-area .tpva-dect p {
+        font-size: 0.7em; } }
+  .tpv:hover .tpv-area .tpva-title, .tpv:hover .tpv-area .tpva-dect {
     margin-left: 5%; }
+
+.tpf-newest1 .tpv .tpv-bg, .tpf-newest2 .tpv .tpv-bg, .tpf-newest3 .tpv .tpv-bg, .tpc-1 .tpv .tpv-bg, .tpc-2 .tpv .tpv-bg, .tpc-3 .tpv .tpv-bg {
+  filter: sepia(40%) hue-rotate(-16deg) contrast(80%) brightness(80%); }
+
+.tpf-newest1 .tpv:hover .tpv-bg, .tpf-newest2 .tpv:hover .tpv-bg, .tpf-newest3 .tpv:hover .tpv-bg, .tpc-1 .tpv:hover .tpv-bg, .tpc-2 .tpv:hover .tpv-bg, .tpc-3 .tpv:hover .tpv-bg {
+  filter: none; }
+
+.tpf-newest1 .tpv:hover .tpv-bg, .tpf-newest2 .tpv:hover .tpv-bg, .tpf-newest3 .tpv:hover .tpv-bg {
+  animation: buruburu 0.3s 1 linear alternate; }
 
 /*--------------------------------------------------------------
 ## MainView
@@ -1151,12 +1163,6 @@ h1 {
       display: flex; }
       .tp-first .tpf-carousel .tpfc-inner a {
         scroll-snap-align: start; }
-  .tp-first .tpf-newest1 .tpv-bg, .tp-first .tpf-newest2 .tpv-bg, .tp-first .tpf-newest3 .tpv-bg {
-    /*filter:grayscale(85%) contrast(180%) brightness(140%);*/
-    filter: sepia(100%) hue-rotate(-16deg) contrast(99%) brightness(80%); }
-  .tp-first .tpf-newest1 .tpv-bg:hover, .tp-first .tpf-newest2 .tpv-bg:hover, .tp-first .tpf-newest3 .tpv-bg:hover {
-    filter: none;
-    animation: buruburu 0.3s 1 linear alternate; }
   .tp-first .tpf-newest2 .tpv-area .tpva-title, .tp-first .tpf-newest3 .tpv-area .tpva-title {
     overflow: hidden;
     white-space: nowrap;
@@ -1190,19 +1196,43 @@ h1 {
   display: grid;
   grid-gap: 1.5625vw 2%; }
   .tp-cate .tp-intro .tpc-title, .tp-cate .tpc-1 .tpc-title, .tp-cate .tpc-2 .tpc-title, .tp-cate .tpc-3 .tpc-title {
+    margin-top: 1rem;
     width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center; }
-    .tp-cate .tp-intro .tpc-title h1, .tp-cate .tpc-1 .tpc-title h1, .tp-cate .tpc-2 .tpc-title h1, .tp-cate .tpc-3 .tpc-title h1 {
-      font-size: 1.8em;
-      text-align: center;
-      color: #fdfffd;
-      text-shadow: 2px 2px 4px rgba(43, 24, 0, 0.8); }
-    .tp-cate .tp-intro .tpc-title i, .tp-cate .tpc-1 .tpc-title i, .tp-cate .tpc-2 .tpc-title i, .tp-cate .tpc-3 .tpc-title i {
-      font-size: 1.8rem;
-      animation: bound 5s ease 0s infinite normal;
-      margin: 0 0.5rem; }
+    position: relative; }
+    .tp-cate .tp-intro .tpc-title .tpct-back, .tp-cate .tpc-1 .tpc-title .tpct-back, .tp-cate .tpc-2 .tpc-title .tpct-back, .tp-cate .tpc-3 .tpc-title .tpct-back {
+      width: 100%;
+      position: absolute;
+      bottom: 0;
+      height: 40%; }
+    .tp-cate .tp-intro .tpc-title .tpct-name, .tp-cate .tpc-1 .tpc-title .tpct-name, .tp-cate .tpc-2 .tpc-title .tpct-name, .tp-cate .tpc-3 .tpc-title .tpct-name {
+      position: absolute;
+      top: 0;
+      margin: 0 auto;
+      filter: drop-shadow(1px 1px 1px rgba(5, 5, 5, 0.9));
+      display: flex;
+      justify-content: center;
+      align-items: center; }
+      .tp-cate .tp-intro .tpc-title .tpct-name h1, .tp-cate .tpc-1 .tpc-title .tpct-name h1, .tp-cate .tpc-2 .tpc-title .tpct-name h1, .tp-cate .tpc-3 .tpc-title .tpct-name h1 {
+        text-align: center;
+        color: #fdfffd;
+        text-shadow: 2px 2px 4px rgba(43, 24, 0, 0.8); }
+      .tp-cate .tp-intro .tpc-title .tpct-name i, .tp-cate .tpc-1 .tpc-title .tpct-name i, .tp-cate .tpc-2 .tpc-title .tpct-name i, .tp-cate .tpc-3 .tpc-title .tpct-name i {
+        animation: bound 5s ease 0s infinite normal;
+        margin: 0 0.5rem; }
+    @media screen and (max-width: 2400px) {
+      .tp-cate .tp-intro .tpc-title, .tp-cate .tpc-1 .tpc-title, .tp-cate .tpc-2 .tpc-title, .tp-cate .tpc-3 .tpc-title {
+        height: 3.5em; }
+        .tp-cate .tp-intro .tpc-title .tpct-name h1, .tp-cate .tpc-1 .tpc-title .tpct-name h1, .tp-cate .tpc-2 .tpc-title .tpct-name h1, .tp-cate .tpc-3 .tpc-title .tpct-name h1 {
+          font-size: 2.8em; }
+        .tp-cate .tp-intro .tpc-title .tpct-name i, .tp-cate .tpc-1 .tpc-title .tpct-name i, .tp-cate .tpc-2 .tpc-title .tpct-name i, .tp-cate .tpc-3 .tpc-title .tpct-name i {
+          font-size: 2.8rem; } }
+    @media screen and (max-width: 580px) {
+      .tp-cate .tp-intro .tpc-title, .tp-cate .tpc-1 .tpc-title, .tp-cate .tpc-2 .tpc-title, .tp-cate .tpc-3 .tpc-title {
+        height: 2.5em; }
+        .tp-cate .tp-intro .tpc-title .tpct-name h1, .tp-cate .tpc-1 .tpc-title .tpct-name h1, .tp-cate .tpc-2 .tpc-title .tpct-name h1, .tp-cate .tpc-3 .tpc-title .tpct-name h1 {
+          font-size: 1.8em; }
+        .tp-cate .tp-intro .tpc-title .tpct-name i, .tp-cate .tpc-1 .tpc-title .tpct-name i, .tp-cate .tpc-2 .tpc-title .tpct-name i, .tp-cate .tpc-3 .tpc-title .tpct-name i {
+          font-size: 1.8rem; } }
   .tp-cate .tp-intro .tpc-index, .tp-cate .tpc-1 .tpc-index, .tp-cate .tpc-2 .tpc-index, .tp-cate .tpc-3 .tpc-index {
     height: auto;
     display: flex;
@@ -1211,6 +1241,15 @@ h1 {
       text-decoration: none;
       height: 48.4375vw;
       margin: 1.5625vw 0; }
+      .tp-cate .tp-intro .tpc-index a:hover, .tp-cate .tpc-1 .tpc-index a:hover, .tp-cate .tpc-2 .tpc-index a:hover, .tp-cate .tpc-3 .tpc-index a:hover {
+        position: static;
+        height: 90vw; }
+        .tp-cate .tp-intro .tpc-index a:hover .tpv-bg, .tp-cate .tpc-1 .tpc-index a:hover .tpv-bg, .tp-cate .tpc-2 .tpc-index a:hover .tpv-bg, .tp-cate .tpc-3 .tpc-index a:hover .tpv-bg {
+          position: static;
+          height: 70%; }
+        .tp-cate .tp-intro .tpc-index a:hover .tpv-area, .tp-cate .tpc-1 .tpc-index a:hover .tpv-area, .tp-cate .tpc-2 .tpc-index a:hover .tpv-area, .tp-cate .tpc-3 .tpc-index a:hover .tpv-area {
+          position: static;
+          height: 30%; }
   .tp-cate .tp-intro .tpi-taco a, .tp-cate .tp-intro .tpi-taco i, .tp-cate .tp-intro .tpi-ika a, .tp-cate .tp-intro .tpi-ika i {
     color: #ff3700;
     font-weight: bold; }
